add ngo details

--- a/explore-ngo.html
+++ b/explore-ngo.html
@@ -41,7 +41,7 @@
                     <div class="row m-0 explore-ngo__individual-row">
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="explore-ngo__individual">
-                                <a href="#" class="explore-ngo__individual-link"></a>
+                                <a href="ngo-details.html" class="explore-ngo__individual-link"></a>
                                 <div class="explore-ngo__individual-details">
                                     <div class="explore-ngo__individual-details-picture">
                                         <img src="images/sunkanmi.jpg" alt="" class="img-fluid">
