--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
     <script src="js/csi.min.js"></script>
-    <title>Document</title>
+    <title>Unburden | Home</title>
 </head>
 
 <body>
@@ -17,6 +17,7 @@
 
 
 
+    <div data-include="footer.html"></div>
 
     <script src="js/jquery.min.js"></script>
     <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
