--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light navbar__header">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="index.html">Unburden</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,6 @@
                 <a class="nav-link navbar__header-link" href="#">Login</a>
             </li>
         </ul>
-        <button class="btn cta__button navbar__header-button" href="#">Login</button>
-
+        <button class="btn cta__button navbar__header-button" href="#">Create NGO profile</button>
     </div>
 </nav>
