update ngo details with campaigns

--- a/ngo-details.html
+++ b/ngo-details.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="css/main.css">
+
     <script src="js/csi.min.js"></script>
     <title>Unburden | Home</title>
 </head>
@@ -41,42 +43,24 @@
                         repudiandae aspernatur placeat iure optio.</p>
                 </div>
                 <div class="ngo__profile-documents">
-                    <h3 class="ngo__profile-documents-title">Verified Documents</h3>
+                    <h3 class="ngo__profile-documents-title">Stat</h3>
                     <div class="ngo__profile-documents-wrap">
                         <div class="row mx-0">
-                            <div class="col-lg-4 col-md-12 ngo__profile-documents-column">
-                                <div class="ngo__profile-documents-individual">
-                                    <a href="https://drive.google.com/file/d/1wjU7lvkHyspnKRwRjPjJr3rZ7ZQ2RHV0/view?usp=sharing"
-                                        class="explore-ngo__individual-link" target="_blank"></a>
-                                    <svg class="icon icon-file">
-                                        <use xlink:href="#icon-file"></use>
-                                    </svg>
-                                    <span>CAC Document</span>
+                            <div class="col-lg-6 col-md-12 ngo__profile-documents-column">
+                                <div class="ngo__profile-total">
+                                    <p><span>₦</span>700k</p>
+                                    <p>Total Raised on Unburden</p>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-12 ngo__profile-documents-column">
-                                <div class="ngo__profile-documents-individual">
-                                    <a href="https://drive.google.com/file/d/1wjU7lvkHyspnKRwRjPjJr3rZ7ZQ2RHV0/view?usp=sharing"
-                                        class="explore-ngo__individual-link" target="_blank"></a>
-                                    <svg class="icon icon-file">
-                                        <use xlink:href="#icon-file"></use>
-                                    </svg>
-                                    <span>Annual Report</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-md-12 ngo__profile-documents-column">
-                                <div class="ngo__profile-documents-individual">
-                                    <a href="https://drive.google.com/file/d/1wjU7lvkHyspnKRwRjPjJr3rZ7ZQ2RHV0/view?usp=sharing"
-                                        class="explore-ngo__individual-link" target="_blank"></a>
-                                    <svg class="icon icon-file">
-                                        <use xlink:href="#icon-file"></use>
-                                    </svg>
-                                    <span>CAC Document</span>
+                            <div class="col-lg-6 col-md-12 ngo__profile-documents-column">
+                                <div class="ngo__profile-total">
+                                    <p>5</p>
+                                    <p>Total Campaign(s)</p>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="ngo__profile-gallery">
+                        <div class="ngo__profile-gallery mt-5">
                             <h3 class="ngo__profile-gallery-title">Gallery</h3>
                             <div class="row mx-0">
                                 <div class="col-lg-4 col-md-4 col-sm-6 col-6 ngo__profile-documents-column">
@@ -128,7 +112,154 @@
                 </div>
             </div>
             <div class="col-lg-5 col-md-6 col-sm-12">
+                <h3 class="ngo__campaign-title">Campaigns Running</h3>
+                <div class="ngo__campaign">
+                    <div class="explore-ngo__individual-details">
+                        <h3 class="ngo__campaign-heading">Back2School</h3>
+                        <div class="ngo__campaign-share">
+                            <a href="#">
+                                <svg class="icon icon-facebook">
+                                    <use xlink:href="#icon-facebook"></use>
+                                </svg>
+                            </a>
+                            <a href="#">
+                                <svg class="icon icon-twitter">
+                                    <use xlink:href="#icon-twitter"></use>
+                                </svg>
+                            </a>
+                            <a href="#">
+                                <svg class="icon icon-linkedin">
+                                    <use xlink:href="#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <p class="ngo__campaign-price"><span>₦504,883</span> of ₦2M</p>
+                    <div id="progressbar" class="progressbar"></div>
 
+                    <p class="explore-ngo__individual-info mt-3 ngo__campaign-info">Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="#">see more...</a>
+                    </p>
+                    <div class="ngo__campaign-button-wrap">
+                        <div class="cta__button">
+                            <a href="#">Donate Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ngo__campaign">
+                    <div class="explore-ngo__individual-details">
+                        <h3 class="ngo__campaign-heading">Makoko Outreach</h3>
+                        <div class="ngo__campaign-share">
+                            <a href="#">
+                                <svg class="icon icon-facebook">
+                                    <use xlink:href="#icon-facebook"></use>
+                                </svg>
+                            </a>
+                            <a href="#">
+                                <svg class="icon icon-twitter">
+                                    <use xlink:href="#icon-twitter"></use>
+                                </svg>
+                            </a>
+                            <a href="#">
+                                <svg class="icon icon-linkedin">
+                                    <use xlink:href="#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <p class="ngo__campaign-price"><span>₦200k</span> of ₦500k</p>
+                    <div id="progressbar" class="progressbar progressbar-two"></div>
+
+                    <p class="explore-ngo__individual-info mt-3 ngo__campaign-info">Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="#">see more...</a>
+                    </p>
+                    <div class="ngo__campaign-button-wrap">
+                        <div class="cta__button">
+                            <a href="#">Donate Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ngo__campaign">
+                    <div class="explore-ngo__individual-details">
+                        <h3 class="ngo__campaign-heading">Back2School</h3>
+                        <div class="ngo__campaign-share">
+                            <a href="#">
+                                <svg class="icon icon-facebook">
+                                    <use xlink:href="#icon-facebook"></use>
+                                </svg>
+                            </a>
+                            <a href="#">
+                                <svg class="icon icon-twitter">
+                                    <use xlink:href="#icon-twitter"></use>
+                                </svg>
+                            </a>
+                            <a href="#">
+                                <svg class="icon icon-linkedin">
+                                    <use xlink:href="#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <p class="ngo__campaign-price"><span>₦504,883</span> of ₦2M</p>
+                    <div id="progressbar" class="progressbar"></div>
+
+                    <p class="explore-ngo__individual-info mt-3 ngo__campaign-info">Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="#">see more...</a>
+                    </p>
+                    <div class="ngo__campaign-button-wrap">
+                        <div class="cta__button">
+                            <a href="#">Donate Now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ngo__campaign">
+                    <div class="explore-ngo__individual-details">
+                        <h3 class="ngo__campaign-heading">Makoko Outreach</h3>
+                        <div class="ngo__campaign-share">
+                            <a href="#">
+                                <svg class="icon icon-facebook">
+                                    <use xlink:href="#icon-facebook"></use>
+                                </svg>
+                            </a>
+                            <a href="#">
+                                <svg class="icon icon-twitter">
+                                    <use xlink:href="#icon-twitter"></use>
+                                </svg>
+                            </a>
+                            <a href="#">
+                                <svg class="icon icon-linkedin">
+                                    <use xlink:href="#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <p class="ngo__campaign-price"><span>₦200k</span> of ₦500k</p>
+                    <div id="progressbar" class="progressbar progressbar-two"></div>
+
+                    <p class="explore-ngo__individual-info mt-3 ngo__campaign-info">Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="#">see more...</a>
+                    </p>
+                    <div class="ngo__campaign-button-wrap">
+                        <div class="cta__button">
+                            <a href="#">Donate Now</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -142,7 +273,22 @@
     <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/tether.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/main.js"></script>
+
+    <script>
+        $(function () {
+            $(".progressbar").progressbar({
+                value: 41
+            });
+        });
+
+        $(function () {
+            $(".progressbar-two").progressbar({
+                value: 47
+            });
+        });
+    </script>
 </body>
 
 </html>
