--- a/svg.html
+++ b/svg.html
@@ -193,5 +193,11 @@
                 d="M26.133 7.779v-7.779h-22.933v29.333h2.667v2.667h22.933v-21.554l-2.667-2.667zM21.333 4.487l5.646 5.646h-5.646v-5.646zM4.267 28.267v-27.2h20.8v5.646l-4.046-4.046h-15.154v25.6h-1.6zM6.933 30.933v-27.2h13.333v7.467h7.467v19.733h-20.8z">
             </path>
         </symbol>
+        <symbol id="icon-facebook" viewBox="0 0 32 32">
+            <title>facebook</title>
+            <path
+                d="M32 5.334c-0.103-2.903-2.43-5.23-5.323-5.334l-0.010-0h-21.334c-2.903 0.104-5.23 2.431-5.333 5.325l-0 0.010v21.331c0.103 2.904 2.431 5.231 5.325 5.334l0.010 0h10.666v-12.090h-3.91v-5.333h3.91v-2.080c0-3.584 2.691-6.811 6-6.811h4.31v5.336h-4.31c-0.472 0-1.022 0.573-1.022 1.43v2.125h5.333v5.333h-5.333v12.090h5.69c2.903-0.104 5.23-2.431 5.333-5.325l0-0.010z">
+            </path>
+        </symbol>
     </defs>
 </svg>
