did donate page

--- a/ngo-details.html
+++ b/ngo-details.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="row mx-0 mt-5">
-            <div class="col-lg-7 col-md-6 col-sm-12">
+            <div class="col-lg-7 col-md-6 col-sm-12 mb-5">
                 <div class="ngo__profile-description">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita veritatis saepe temporibus
                         provident repudiandae! Illum, perspiciatis. Earum, voluptatem odio! Odio reprehenderit
@@ -141,11 +141,12 @@
                         consectetur
                         adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis Lorem ipsum dolor sit amet
                         consectetur
-                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="#">see more...</a>
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="donate.html">see
+                            more...</a>
                     </p>
                     <div class="ngo__campaign-button-wrap">
                         <div class="cta__button">
-                            <a href="#">Donate Now</a>
+                            <a href="donate.html">Donate Now</a>
                         </div>
                     </div>
                 </div>
@@ -178,11 +179,12 @@
                         consectetur
                         adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis Lorem ipsum dolor sit amet
                         consectetur
-                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="#">see more...</a>
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="donate.html">see
+                            more...</a>
                     </p>
                     <div class="ngo__campaign-button-wrap">
                         <div class="cta__button">
-                            <a href="#">Donate Now</a>
+                            <a href="donate.html">Donate Now</a>
                         </div>
                     </div>
                 </div>
@@ -215,11 +217,12 @@
                         consectetur
                         adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis Lorem ipsum dolor sit amet
                         consectetur
-                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="#">see more...</a>
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="donate.html">see
+                            more...</a>
                     </p>
                     <div class="ngo__campaign-button-wrap">
                         <div class="cta__button">
-                            <a href="#">Donate Now</a>
+                            <a href="donate.html">Donate Now</a>
                         </div>
                     </div>
                 </div>
@@ -252,11 +255,12 @@
                         consectetur
                         adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis Lorem ipsum dolor sit amet
                         consectetur
-                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="#">see more...</a>
+                        adipisicing elit. Laborum dignissimos sed deleniti aliquid omnis <a href="donate.html">see
+                            more...</a>
                     </p>
                     <div class="ngo__campaign-button-wrap">
                         <div class="cta__button">
-                            <a href="#">Donate Now</a>
+                            <a href="donate.html">Donate Now</a>
                         </div>
                     </div>
                 </div>
