fix header responsive

--- a/navbar.html
+++ b/navbar.html
@@ -14,6 +14,8 @@
                 <a class="nav-link navbar__header-link" href="#">Login</a>
             </li>
         </ul>
-        <button class="btn cta__button navbar__header-button" href="#">Create NGO profile</button>
+        <div>
+            <button class="btn cta__button navbar__header-button" href="#">Create NGO profile</button>
+        </div>
     </div>
 </nav>
