--- a/explore-ngo.html
+++ b/explore-ngo.html
@@ -63,7 +63,7 @@
 
                         <div class="col-lg-6 col-md-6 col-sm-12">
                             <div class="explore-ngo__individual">
-                                <a href="#" class="explore-ngo__individual-link"></a>
+                                <a href="ngo-details.html" class="explore-ngo__individual-link"></a>
                                 <div class="explore-ngo__individual-details">
                                     <div class="explore-ngo__individual-details-picture">
                                         <img src="images/sunkanmi.jpg" alt="" class="img-fluid">
@@ -205,26 +205,6 @@
                     <div class="col-lg-12 col-md-4 col-sm-6 col-12">
                         <div class="explore-ngo__category">
                             <a href="#" class="explore-ngo__individual-link"></a>
-                            <svg class="icon icon-hospital">
-                                <use xlink:href="#icon-hospital"></use>
-                            </svg>
-                            <span>Health</span>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-12 col-md-4 col-sm-6 col-12">
-                        <div class="explore-ngo__category">
-                            <a href="#" class="explore-ngo__individual-link"></a>
-                            <svg class="icon icon-baby">
-                                <use xlink:href="#icon-baby"></use>
-                            </svg>
-                            <span>Children</span>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-12 col-md-4 col-sm-6 col-12">
-                        <div class="explore-ngo__category">
-                            <a href="#" class="explore-ngo__individual-link"></a>
                             <svg class="icon icon-girl">
                                 <use xlink:href="#icon-girl"></use>
                             </svg>
@@ -238,9 +218,21 @@
                             <svg class="icon icon-hospital">
                                 <use xlink:href="#icon-hospital"></use>
                             </svg>
-                            <span>Health</span>
+                            <span>Hospital Bills</span>
                         </div>
                     </div>
+
+                    <div class="col-lg-12 col-md-4 col-sm-6 col-12">
+                        <div class="explore-ngo__category">
+                            <a href="#" class="explore-ngo__individual-link"></a>
+                            <svg class="icon icon-violence">
+                                <use xlink:href="#icon-violence"></use>
+                            </svg>
+                            <span>Domestic Violence</span>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
