--- a/navbar.html
+++ b/navbar.html
@@ -11,7 +11,7 @@
                 <a class="nav-link navbar__header-link" href="explore-ngo.html">Explore NGOs</a>
             </li>
             <li class="nav-item navbar__header-item">
-                <a class="nav-link navbar__header-link" href="#">Login</a>
+                <a class="nav-link navbar__header-link" href="login.html">Login</a>
             </li>
         </ul>
         <div>
