--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light navbar__header">
-    <a class="navbar-brand" href="index.html" style="font-size:24px;">Helpinn</a>
+    <a class="navbar-brand" href="home.html" style="font-size:24px;">Helpinn</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
