add autofocus to donate input field

--- a/donate.html
+++ b/donate.html
@@ -85,7 +85,7 @@
                         <div class="donate__input-currency">
                             <p>₦</p>
                         </div>
-                        <input type="text" name="amount" id="donateAmount">
+                        <input type="text" name="amount" id="donateAmount" autofocus>
                     </div>
 
                     <ul class="nav nav-pills mb-3 donate__tab" id="pills-tab" role="tablist">
