add terms of use conditions upon sign up

--- a/signup.html
+++ b/signup.html
@@ -58,6 +58,8 @@
                 <input type="email" class="login__input" placeholder="Email">
                 <input type="password" class="login__input" placeholder="Password">
                 <input type="password" class="login__input" placeholder="Confirm Password">
+
+                <p class="login__ngtv">By clicking the button you agree to <a href="#">Terms of use</a></p>
                 <button class="cta__button btn login__btn">Create account</button>
             </form>
             <p class="login__ngtv">Already have an account? <a href="login.html">Login</a></p>
