--- a/explore-ngo.html
+++ b/explore-ngo.html
@@ -23,13 +23,9 @@
                 <div class="explore-ngo__wrapper">
                     <div class="row m-0">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
-                            <div class="explore-ngo__new mb-4">
-                                <h4>Discover new NGOs</h4>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                             <div class="explore-ngo__search-wrap">
-                                <input type="text" name="search" id="" class="explore-ngo__search">
+                                <input type="text" name="search" id="" class="explore-ngo__search"
+                                    placeholder="Search NGOs">
                                 <div class="explore-ngo__search-button btn">
                                     <svg class="icon icon-search-icon">
                                         <use xlink:href="#icon-search-icon"></use>
